--- a/index.html
+++ b/index.html
@@ -1,46 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-
-    <meta name="facebook-domain-verification" content="au9l2wi04b7cw3fby0i67rwvuf0q1c" />
-
-    <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '975015639805077');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=975015639805077&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '975015639805077');
-fbq('track', 'AddToCart');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=975015639805077&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -53,7 +13,7 @@ src="https://www.facebook.com/tr?id=975015639805077&ev=PageView&noscript=1"
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Keto Burn</title>
+    <title>PROTOCOLO ZERO</title>
     
     <style type="text/css">
       body {
@@ -78,14 +38,16 @@ src="https://www.facebook.com/tr?id=975015639805077&ev=PageView&noscript=1"
             <img class="img-fluid" src="./assets/img/ultrasecreto.PNG">
 
             <!-- Headline -->
-            <h4 class="my-4"><b>Simples método caseiro que te faz DERRETER 30 KG de Gordura em 2 Meses!</b></h4>
+            <h4 class="my-4"><b>SIMPLES ROTINA CASEIRA DE APENAS 3 MINUTOS QUE OBRIGA OS FOLÍCULOS VOLTAREM A CRESCER!</b></h4>
+            <!-- Headline -->
+            <h8 class="my-4"><b>Assista o vídeo abaixo até o final para prosseguir:</b></h8><br>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_622ff3b7421423000af057a8">var s=document.createElement("script");s.src="https://cdn.converteai.net/c7ae6296-c879-478d-b97d-14f74594abff/players/622ff3b7421423000af057a8/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-R5gGYf45Ew?rel=0&modestbranding=1&showinfo=0&controls=0" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://bit.ly/3IiNHYA" class="a-btn" style="text-decoration: none;">
+              <a href="https://bit.ly/3ffbnVc" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(Atenção: Vagas Limitadas)</span>
               </a>
@@ -99,7 +61,7 @@ src="https://www.facebook.com/tr?id=975015639805077&ev=PageView&noscript=1"
     </header>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 960000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 216000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
