--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.PNG">
 
             <!-- Headline -->
-            <h4 class="my-4"><b>SIMPLES ROTINA CASEIRA DE APENAS 3 MINUTOS QUE OBRIGA OS FOLÍCULOS VOLTAREM A CRESCER!</b></h4>
+            <h4 class="my-4"><b>VEJA SIMPLES ROTINA CASEIRA DE APENAS 3 MINUTOS QUE OBRIGA OS FOLÍCULOS VOLTAREM A CRESCER!</b></h4>
             <!-- Headline -->
-            <h8 class="my-4"><b>Assista o vídeo abaixo até o final para prosseguir:</b></h8><br>
+            <h8 class="my-4"><b>Assista a explicação de 2 minutos até o final para prosseguir:</b></h8><br>
 
             <!-- VSL -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/-R5gGYf45Ew?rel=0&modestbranding=1&showinfo=0&controls=0" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
