--- a/ps/index.html
+++ b/ps/index.html
@@ -11,11 +11,11 @@
     <div class="black">
       <div>
         <div class="question">
-          <h1>Você precisa ter mais de 18 anos para acessar o site!</h1>
-          <p>Você confirma ter mais de 18 anos?</p>
+          <h1>TUDO CERTO!</h1>
+          <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://bit.ly/3Ulsi8z">SIM</a>
+          <a class="btn" href="https://bit.ly/3xQaGrU">CONTINUAR</a>
         </div>
       </div>    
     </div>
