--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.PNG">
 
             <!-- Headline -->
-            <h4 class="my-4"><b>VEJA SIMPLES ROTINA CASEIRA DE APENAS 3 MINUTOS QUE OBRIGA OS FOLÍCULOS VOLTAREM A CRESCER!</b></h4>
+            <h4 class="my-4"><b>ESSA SIMPLES ROTINA CASEIRA DE APENAS 3 MINUTOS OBRIGA OS FOLÍCULOS VOLTAREM A CRESCER!</b></h4>
             <!-- Headline -->
             <h8 class="my-4"><b>Assista a explicação de 2 minutos até o final para prosseguir:</b></h8><br>
 
