--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
             <!-- Headline -->
             <h4 class="my-4"><b>ESSA SIMPLES ROTINA CASEIRA DE APENAS 3 MINUTOS OBRIGA OS FOLÍCULOS VOLTAREM A CRESCER!</b></h4>
             <!-- Headline -->
-            <h8 class="my-4"><b>Assista a explicação de 2 minutos até o final para prosseguir:</b></h8><br>
+            <h8 class="my-4"><b>Assista a explicação de 2 minutos até o final para prosseguir:</b></h8>
+            <br>
 
             <!-- VSL -->
+            <div class="iframe-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/-R5gGYf45Ew?rel=0&modestbranding=1&showinfo=0&controls=0" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
-
+            </div>
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://bit.ly/3ffbnVc" class="a-btn" style="text-decoration: none;">
