--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <meta name="facebook-domain-verification" content="yey3kgd5zvbrh0ticpiumuqgxop2xh" />
     <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
